// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'✂️  Runes should handle 3️⃣' 1`] = `
Array [
  "3️⃣",
]
`;

exports[`'✂️  Runes should handle 3️⃣' 2`] = `1`;

exports[`'✂️  Runes should handle ZERO WIDTH JOINER 2' 1`] = `
Array [
  "👨‍👨‍👧‍👧",
]
`;

exports[`'✂️  Runes should handle ZERO WIDTH JOINER 2' 2`] = `1`;

exports[`'✂️  Runes should handle ZERO WIDTH JOINER' 1`] = `
Array [
  "👨‍👩‍👧",
]
`;

exports[`'✂️  Runes should handle ZERO WIDTH JOINER' 2`] = `1`;

exports[`'✂️  Runes should handle acrophonic' 1`] = `
Array [
  "𐅧",
  ",",
  " ",
  "𐅨",
  ",",
  " ",
  "a",
  "n",
  "d",
  " ",
  "𐅩",
]
`;

exports[`'✂️  Runes should handle acrophonic' 2`] = `11`;

exports[`'✂️  Runes should handle arabic' 1`] = `
Array [
  "ځ",
  "ڂ",
  "ڃ",
  "ڄ",
  "څ",
  "چ",
  "ڇ",
  "ڈ",
]
`;

exports[`'✂️  Runes should handle arabic' 2`] = `8`;

exports[`'✂️  Runes should handle checkmark' 1`] = `
Array [
  "1",
  "2",
  "3",
  "🍕",
  "✓",
]
`;

exports[`'✂️  Runes should handle checkmark' 2`] = `5`;

exports[`'✂️  Runes should handle chinese 2' 1`] = `
Array [
  "𠬠",
  "𡬶",
  "𫗭",
  "𣛙",
  "𢎐",
]
`;

exports[`'✂️  Runes should handle chinese 2' 2`] = `5`;

exports[`'✂️  Runes should handle chinese' 1`] = `
Array [
  "𨭎",
  "\\"",
  ",",
  " ",
  "\\"",
  "𠬠",
  "\\"",
  ",",
  " ",
  "a",
  "n",
  "d",
  " ",
  "\\"",
  "𩷶",
  "\\"",
]
`;

exports[`'✂️  Runes should handle chinese' 2`] = `16`;

exports[`'✂️  Runes should handle country flags/regional indicator characters' 1`] = `
Array [
  "🇦🇸",
]
`;

exports[`'✂️  Runes should handle country flags/regional indicator characters' 2`] = `1`;

exports[`'✂️  Runes should handle emoji in middle' 1`] = `
Array [
  "a",
  "b",
  "c",
  "😤",
  "d",
  "e",
  "f",
]
`;

exports[`'✂️  Runes should handle emoji in middle' 2`] = `7`;

exports[`'✂️  Runes should handle emoji on end' 1`] = `
Array [
  "1",
  "2",
  "3",
  "🍥",
]
`;

exports[`'✂️  Runes should handle emoji on end' 2`] = `4`;

exports[`'✂️  Runes should handle emoji' 1`] = `
Array [
  "🍕",
  "⚽",
  "⛵",
  "✨",
  "⏳",
  "☕",
  "⏰",
  "🇯🇲",
  "😍",
  "👍",
  "💅",
  "😋",
  "👭",
  "👯",
  "✊",
  "👸🏽",
  "❤️",
]
`;

exports[`'✂️  Runes should handle emoji' 2`] = `17`;

exports[`'✂️  Runes should handle extended grapheme clusters' 1`] = `
Array [
  "ม้",
  "า",
  "ล",
  "า",
  "ย",
  "ห",
  "ก",
  "ตั",
]
`;

exports[`'✂️  Runes should handle extended grapheme clusters' 2`] = `8`;

exports[`'✂️  Runes should handle fraktur' 1`] = `
Array [
  "𝔅",
  "𝔎",
]
`;

exports[`'✂️  Runes should handle fraktur' 2`] = `2`;

exports[`'✂️  Runes should handle leading emoji' 1`] = `
Array [
  "🍕",
  "a",
  "b",
  "d",
]
`;

exports[`'✂️  Runes should handle leading emoji' 2`] = `4`;

exports[`'✂️  Runes should handle math script' 1`] = `
Array [
  "𝒞",
  "𝒯",
  "𝒮",
  "𝒟",
]
`;

exports[`'✂️  Runes should handle math script' 2`] = `4`;

exports[`'✂️  Runes should handle regular string' 1`] = `
Array [
  "H",
  "e",
  "l",
  "l",
  "o",
]
`;

exports[`'✂️  Runes should handle regular string' 2`] = `5`;

exports[`'✂️  Runes should handle single char' 1`] = `
Array [
  "a",
]
`;

exports[`'✂️  Runes should handle single char' 2`] = `1`;

exports[`'✂️  Runes should handle skin tone indicators' 1`] = `
Array [
  "🎅🏻",
  "🎅🏼",
  "🎅🏽",
  "🎅🏾",
  "🎅🏿",
]
`;

exports[`'✂️  Runes should handle skin tone indicators' 2`] = `5`;

exports[`'✂️  Runes should handle 🏳️‍🌈' 1`] = `
Array [
  "🏳️‍🌈",
]
`;

exports[`'✂️  Runes should handle 🏳️‍🌈' 2`] = `1`;

exports[`'✂️  Runes should reverse' 1`] = `"✓🍕321"`;

exports[`'✂️  Runes should reverse' 2`] = `"123🍕✓"`;
